--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 
 
-    <div class="container"><div class="d-none">asasass</div>
+    <div class="container"><div class="d-none"></div>
       <div class="innerContainer">
-        <div class="d-none d-sm-block"><h1 id="title">CARLESGOMALB.COM</h1></div>
-        <div class="d-block d-sm-none"><h2 id="title-xs">CARLESGOMALB.COM</h2></div>
-        <h3 id="subtitle">Welcome to my website!</h3>
+        <div class="d-none d-sm-block"><h1 id="title" class="text-primary">CARLESGOMALB.COM</h1></div>
+        <div class="d-block d-sm-none"><h2 id="title-xs" class="text-primary">CARLESGOMALB.COM</h2></div>
+        <h3 id="subtitle" class="text-primary">Bienvenido!</h3>
 
 
 
@@ -69,6 +69,31 @@
 
             <div class="col-md-4">
               <ul class="list-group" style="padding:10px;">
+                <li class="list-group-item active"><b>MIS ESTUDIOS</b></li>
+                <li class="list-group-item">
+                  <b>CFGS Desarrollo de Aplicaciones Multiplataforma</b>
+                  <p class="job-year"> 2014-2015 </p>
+                  <p class="job-year"> Monlau Centro de Estudios </p>
+                </li>
+                <li class="list-group-item">
+                  <b>CFGS Administración de Sistemas Informáticos en Red</b>
+                  <p class="job-year"> 2014-2015 </p>
+                  <p class="job-year"> Monlau Centro de Estudios </p>
+                </li>
+                <li class="list-group-item">
+                  <b>CFGM Sistemas Microinformáticos y Redes</b>
+                  <p class="job-year"> 2009-2011 </p>
+                  <p class="job-year"> Monlau Centro de Estudios </p>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+
+          <div class="row">
+
+            <div class="col-md-4">
+              <ul class="list-group" style="padding:10px;">
                 <li class="list-group-item active"><b>MIS LOGROS</b></li>
                 <li class="list-group-item">
                   <b>iOS</b>
@@ -85,6 +110,7 @@
                 </li>
               </ul>
             </div>
+
           </div>
 
         </div>
@@ -102,8 +128,11 @@
 
     $(document).ready(function(){
       $("#title, #title-xs").slideDown(1000).ready(function(){
-        $("#subtitle, #subtitle-xs").delay(600).slideDown(1000).delay(1000).slideUp(1000);
-        $(".inner-container").delay(3600).slideDown(1000);
+        //$("#subtitle, #subtitle-xs").delay(600).slideDown(1000).delay(1000).slideUp(1000);
+        $(".inner-container").delay(1000).fadeIn(1000);
+        $("#title, #title-xs").animate({
+          "border-bottom-width": "2px"
+        }, 600);
       });
     });
 
