--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
               <ul class="list-group" style="padding:10px;">
                 <li class="list-group-item active"><b><span class="oi text-default go-left" data-glyph="person"></span> SOBRE MI</b></li>
                 <li class="list-group-item">Nombre <b>Carles Gómez Alberola</b></li>
-                <li class="list-group-item">Fecha de nacimiento <b>06/09/1992</b></li>
+                <li class="list-group-item">Año de nacimiento <b>1992</b></li>
                 <li class="list-group-item">Residencia <b>Barcelona, Spain</b></li>
                 <li class="list-group-item">Contacto <b>carlesgomalb@hotmail.es</b></li>
+                <li class="list-group-item"><b><a target="_blank" href="https://www.linkedin.com/in/carlesgomalb/"> LinkedIn </a></b></li>
               </ul>
             </div>
 
@@ -79,7 +80,7 @@
                 </li>
                 <li class="list-group-item">
                   <b>CFGS Administración de Sistemas Informáticos en Red</b>
-                  <p class="job-year"> 2014-2015 </p>
+                  <p class="job-year"> 2012-2014 </p>
                   <p class="job-year"> Monlau Centro de Estudios </p>
                 </li>
                 <li class="list-group-item">
